# ----agent

./: .env.example  README.md  pyproject.toml  run_agent.bat  run_agent.ps1
docs/: architecture.md
examples/: sample_state.json
examples/crop_profiles/: doc_game_image3.json  shop_buy_fullscreen.json  shop_buy_fullscreen_16x9.json  shop_buy_video_crop.json  shop_buy_video_right_crop.json  trinket_shop_fullscreen.json  trinket_shop_video_crop.json  triple_discover_video_crop.json
examples/data/: cards.enriched.json  cards.enriched.sample.json  cards.generated.json  cards.json  cards.ocr.test.json  compositions.generated.json  compositions.json  trinkets.enriched.sample.json  trinkets.generated.json  trinkets.json
src/battlegrounds_agent/: __init__.py  asset_indexer.py  card_image_ocr.py  card_slot_analyzer.py  cli.py  composition_knowledge.py  composition_reader.py  crop_profiles.py  database.py  desktop_assistant.py  evaluator.py  game_area_detector.py  hud_reader.py  image_recognizer.py  live_agent.py  llm.py  metadata_enricher.py  metadata_importer.py  planner.py  prompt_builder.py  schemas.py  screen_reader.py  state_builder.py  state_summary.py  synergy.py  vision_adapter.py  vision_debugger.py  vision_shop_reader.py  window_capture.py
tests/: asset_index_smoke_test.py  card_image_ocr_smoke_test.py  hud_reader_smoke_test.py  image_recognizer_smoke_test.py  metadata_importer_smoke_test.py  screen_reader_smoke_test.py  smoke_test.py  state_builder_smoke_test.py  synergy_smoke_test.py
work/: recognizer_fast_index.json
(+1 files in other folders)
